# nixos_server_configs

./: README.md  configuration.nix  deploy.sh  flake.nix  hardware-configuration.nix  libvirt.nix  planes.nix  wilofan.nix
fan/: CLAUDE.md  Cargo.toml  config.toml  module-client.nix  module.nix  result
fan/.claude/: settings.local.json
fan/src/: config.rs  protocol.rs
jade/: planes.nix
system/autoresponder/: ai.nix  cache.nix  configuration.nix  hardware-configuration.nix  minecraft.nix  networking.nix  nvidia.nix  wilofan.nix
system/brain-ghost/: ai.nix  cache.nix  configuration.nix  hardware-configuration.nix  libvirt.nix  networking.nix  nvidia.nix  whisper.nix
system/common/: jade-preferences.nix  nix.nix
