[package]
name = "fan"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
libmedium = { version = "0.13.4", default-features = false, features = ["async", "writeable"] }
nvml-wrapper = { version = "0.11.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "net", "rt", "rt-multi-thread", "time"], default-features = false }
toml = { version = "0.9.7", default-features = false, features = ["parse", "serde"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.20"
